solve double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
 
 html {
   height: 100%;
+  overflow: hidden;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
@@ -18,16 +20,6 @@ body {
   scroll-behavior: smooth;
 
   @apply bg-custom-blue text-custom-brown;
-}
-
-#root {
-  min-height: 100%;
-  overflow-x: hidden;
-}
-
-main {
-  width: 100%;
-  overflow-x: hidden;
 }
 
 .music-player__slider {
